--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sensitiveWord",
+    "name": "sensitive-word-trie",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
